2001-07-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* chunkter.cc: check for NULL shape before drawing flat. (for FoV)

2001-07-07  Max Horn  <max@quendi.de>
	* files/listfiles.cc: finished up mac implementation of file lister
	* gumps/Newfile_gump.cc: removed old junk
	* gamewin.cc: added using std::ios

2001-07-07  Jeff Freedman  <jeff@amy.nerble.net>
	* Chunkter.{cc,h}: First use of Chunk_terrain seems to work.

2001-07-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* ibuf8.cc, Makefile.am: include utils.h

2001-07-06  Ryan Nunn <triforce@merlin.net.au>
	* cheat.cc, exult.cc, menulist.cc, gumps/gump_utils.cc: Fixed all
	  problems with scale factors other 2.
	* exult.cc, imagewin/imagewin.cc, imagewin/imagewin.h: Only repaint the
	  entire screen when doing palette cylcing and scaling if a palette isn't
	  being used.
	* imagewin/ibuf8.cc, imagewin/ibuf8.h, shapes/vgafile.cc: Improved RLE
	  drawing code. Almost completely rewrote paint_rle(), and moved it to
	  Image_buffer8
	* imagewin/scale.cc, imagewin/scale.h: Slightly improved Point and 
	  Interlaced scalers.
	* msvcstuff/msvc_kludges.h: Tweak

2001-07-06  Tristan Tarrant <nadir@users.sourceforge.net>
	* exultmenu.cc, bggame.cc, sigame.cc: display version on main menu,
	instead of during intro

2001-07-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Paperdoll_gump_info.cc: fixed "can't wear leather collar" bug
	* exultmenu.cc: fixed annoying flash between menus

2001-07-06  Jeff Freedman  <jeff@amy.nerble.net>
	* gamewin,actors: Dead_bodies are created with the is_temporary
	flag if their owners had it.  The old dead-bodies queue and
	associated methods are no longer needed, and have been removed.

2001-07-05  Ryan Nunn <triforce@merlin.net.au>
	* msvcstuff: Files required to compile Exult with MSVC++ 6
	* Most files: Changes to get Exult to compile with MSVC++ 6

2001-07-05  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* server.cc: removed double config.h, added #ifdef HAVE_CONFIG_H
	